--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 			-->
 			<a class="btn btn-outline-light btn-lg" role=button aria-label="Contact" href="mailto:mail@rupom.dev" target="_blank">Contact ✉</a>
 			<a target=_blank class="btn btn-outline-light btn-lg" role=button aria-label="Resume" href="https://cdn.rupom.dev" style="margin-left: 10px;">Resume 🡫</a>
+			<a target=_blank class="btn btn-outline-light btn-lg" role=button aria-label="Resume" href="https://cdn.rupom.dev" style="margin-left: 10px;">Blog</a>
 		</div>
 	</div>
 </body>
