--- a/ip.html
+++ b/ip.html
@@ -4,46 +4,12 @@
   <meta charset="UTF-8">
   <title>IP Details Finder | RUPOM</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- Note: Tailwind CDN is for development only. For production, install Tailwind locally: https://tailwindcss.com/docs/installation -->
   <script src="https://cdn.jsdelivr.net/npm/react@18.2.0/umd/react.development.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/react-dom@18.2.0/umd/react-dom.development.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@babel/standalone@7.22.9/babel.min.js"></script>
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
-  <script type="text/javascript">
-        var gk_isXlsx = false;
-        var gk_xlsxFileLookup = {};
-        var gk_fileData = {};
-        function filledCell(cell) {
-          return cell !== '' && cell != null;
-        }
-        function loadFileData(filename) {
-        if (gk_isXlsx && gk_xlsxFileLookup[filename]) {
-            try {
-                var workbook = XLSX.read(gk_fileData[filename], { type: 'base64' });
-                var firstSheetName = workbook.SheetNames[0];
-                var worksheet = workbook.Sheets[firstSheetName];
-
-                var jsonData = XLSX.utils.sheet_to_json(worksheet, { header: 1, blankrows: false, defval: '' });
-                var filteredData = jsonData.filter(row => row.some(filledCell));
-
-                var headerRowIndex = filteredData.findIndex((row, index) =>
-                  row.filter(filledCell).length >= filteredData[index + 1]?.filter(filledCell).length
-                );
-                if (headerRowIndex === -1 || headerRowIndex > 25) {
-                  headerRowIndex = 0;
-                }
-
-                var csv = XLSX.utils.aoa_to_sheet(filteredData.slice(headerRowIndex));
-                csv = XLSX.utils.sheet_to_csv(csv, { header: 1 });
-                return csv;
-            } catch (e) {
-                console.error(e);
-                return "";
-            }
-        }
-        return gk_fileData[filename] || "";
-        }
-</script>
   <style>
     @keyframes spin {
       0% { transform: rotate(0deg); }
@@ -58,6 +24,9 @@
     @keyframes fadeIn {
       0% { opacity: 0; transform: translateY(10px); }
       100% { opacity: 1; transform: translateY(0); }
+    }
+    .custom-background {
+      background: linear-gradient(135deg, #1f2937 0%, #111827 100%);
     }
   </style>
 </head>
@@ -76,21 +45,30 @@
         document.documentElement.classList.add('dark');
       }, []);
 
+      const validateIp = (ip) => {
+        const ipRegex = /^(\d{1,3}\.){3}\d{1,3}$/;
+        return ipRegex.test(ip) && ip.split('.').every(num => num >= 0 && num <= 255);
+      };
+
       const fetchGeoData = async (ipAddress, retry = false) => {
         setLoading(true);
         setError('');
         try {
-          const response = await fetch(`https://ipapi.co/${ipAddress}/json/`, {
+          console.log(`Fetching data for IP: ${ipAddress}, Retry: ${retry}`);
+          const response = await fetch(`http://ip-api.com/json/${ipAddress}`, {
             method: 'GET',
             headers: {
               'Accept': 'application/json',
             },
           });
+          console.log('Response Status:', response.status);
+          console.log('Response Headers:', response.headers.get('Access-Control-Allow-Origin'));
           const data = await response.json();
-          if (data.error) {
-            const errorMsg = data.reason ? `API Error: ${data.reason}` : 'Invalid IP address or API error';
+          console.log('API Response:', data);
+          if (data.status === 'fail') {
+            const errorMsg = data.message ? `API Error: ${data.message}` : 'Invalid IP address or API error';
             setError(errorMsg);
-            if (data.reason.includes('rate limit') && !retry) {
+            if (data.message.includes('rate limit') && !retry) {
               setError('Rate limit exceeded. Retrying in 60 seconds...');
               setTimeout(() => fetchGeoData(ipAddress, true), 60000);
             } else {
@@ -98,23 +76,24 @@
             }
           } else {
             setGeoData({
-              query: data.ip,
-              country: data.country_name,
-              countryCode: data.country,
-              region: data.region_code,
-              regionName: data.region,
+              query: data.query,
+              country: data.country,
+              countryCode: data.countryCode,
+              region: data.region,
+              regionName: data.regionName,
               city: data.city,
-              zip: data.postal || 'N/A',
-              lat: data.latitude,
-              lon: data.longitude,
-              isp: data.org || 'N/A',
+              zip: data.zip || 'N/A',
+              lat: data.lat,
+              lon: data.lon,
+              isp: data.isp || 'N/A',
               org: data.org || 'N/A',
-              as: data.asn || 'N/A',
+              as: data.as || 'N/A',
               timezone: data.timezone,
             });
           }
         } catch (err) {
-          setError(`Failed to fetch data: ${err.message}. Ensure you're running this on a local server (not file://) and check your network.`);
+          console.error('Fetch Error:', err);
+          setError(`Failed to fetch data: ${err.message}. Ensure you're running this on a local server (not file://) over HTTP and check your network.`);
           setGeoData(null);
         }
         setLoading(false);
@@ -122,11 +101,15 @@
 
       const handleSubmit = (e) => {
         e.preventDefault();
-        if (ip.trim()) {
-          fetchGeoData(ip);
-        } else {
-          setError('Please enter a valid IP address');
+        if (!ip.trim()) {
+          setError('Please enter an IP address');
+          return;
         }
+        if (!validateIp(ip)) {
+          setError('Please enter a valid IPv4 address (e.g., 1.1.1.1)');
+          return;
+        }
+        fetchGeoData(ip);
       };
 
       return (
@@ -169,7 +152,7 @@
                     <span> Try waiting 60 seconds or use a different IP.</span>
                   )}
                   {error.includes('Failed to fetch') && (
-                    <span> Open Developer Tools (F12 &gt; Console) for details.</span>
+                    <span> Open Developer Tools (F12 > Console) for details.</span>
                   )}
                 </div>
               )}
