--- a/prototype.html
+++ b/prototype.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta http-equiv="refresh" content="0; url=https://www.figma.com/proto/V6Z8iNChvpLeAqRFncRNub/The-Suns-Secret-Adventure?node-id=274-742&t=eFsc9YYnlPi3cyY6-1">
+<meta http-equiv="refresh" content="0; url=https://www.figma.com/proto/V6Z8iNChvpLeAqRFncRNub/The-Suns-Secret-Adventure">
 </head>
 <body>
 </body>
