--- a/index.html
+++ b/index.html
@@ -5,10 +5,48 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>RUPOM — PERSONAL PAGE</title>
 
+  <!-- SEO meta -->
+  <meta name="description" content="Md. Shahin Akhtar Rupom — Software engineer and CSE student. Full‑stack developer skilled in Java, Spring, Spring Boot, JavaScript, TypeScript, React, Next.js, Node.js, REST APIs, GraphQL, Docker, Kubernetes, AWS, SQL and more." />
+  <meta name="keywords" content="Md. Shahin Akhtar Rupom, Rupom Chowdhury, Rupom, software engineer, full stack developer, Java, Spring, Spring Boot, JavaScript, TypeScript, React, Node.js, Next.js, Docker, Kubernetes, AWS, PostgreSQL, MongoDB, DevOps, CI/CD, REST API, GraphQL" />
+  <meta name="author" content="Md. Shahin Akhtar Rupom" />
+  <link rel="canonical" href="https://rupom.dev/" />
+
+  <!-- Open Graph / Twitter -->
+  <meta property="og:title" content="MD. SHAHIN AKHTAR RUPOM — Software Engineer" />
+  <meta property="og:description" content="Full-stack developer skilled in Java, Spring, JavaScript, React, Node.js, Docker, Kubernetes, and cloud technologies." />
+  <meta property="og:image" content="/images/og-image.svg" />
+  <meta property="og:url" content="https://rupom.dev/" />
+  <meta property="og:type" content="profile" />
+
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="MD. SHAHIN AKHTAR RUPOM — Software Engineer" />
+  <meta name="twitter:description" content="Full-stack developer skilled in Java, Spring, JavaScript, React, Node.js, Docker, Kubernetes, and cloud technologies." />
+  <meta name="twitter:image" content="/images/og-image.svg" />
+
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
   <link rel="stylesheet" href="main.css" />
 
   <link rel="icon" type="image/png" href="images/favicon.png" />
+  
+  <!-- Structured data for SEO (Person) -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Person",
+    "name": "Md. Shahin Akhtar Rupom",
+    "alternateName": "Rupom",
+    "jobTitle": "Software Engineer / Microsoft Student Ambassador",
+    "url": "https://rupom.dev",
+    "image": "https://rupom.dev/images/og-image.svg",
+    "description": "Full-stack developer skilled in Java, Spring, JavaScript, React, Node.js, Docker, Kubernetes, and cloud technologies.",
+    "sameAs": [
+      "https://github.com/RupomChowdhury",
+      "https://www.linkedin.com/in/md-shahin-akhtar-rupom",
+      "https://www.facebook.com/web.rupom"
+    ],
+    "knowsAbout": ["Java","Spring","Spring Boot","JavaScript","TypeScript","React","Node.js","Next.js","Docker","Kubernetes","AWS","PostgreSQL","MongoDB","DevOps","CI/CD","REST APIs","GraphQL"]
+  }
+  </script>
 </head>
 
 <body>
@@ -30,6 +68,7 @@
         <span class="skill-tag tag-spring">#spring</span>
         <span class="skill-tag tag-spring">#springboot</span>
         <span class="skill-tag tag-javascript">#javascript</span>
+        <span class="skill-tag tag-javascript">#typescript</span>
         <span class="skill-tag tag-php">#php</span>
         <span class="skill-tag tag-database">#mysql</span>
         <span class="skill-tag tag-database">#mssql</span>
@@ -37,20 +76,43 @@
         <span class="skill-tag tag-javascript">#express</span>
         <span class="skill-tag tag-javascript">#html</span>
         <span class="skill-tag tag-javascript">#css</span>
+        <span class="skill-tag tag-react">#react</span>
+        <span class="skill-tag tag-react">#nextjs</span>
         <span class="skill-tag tag-react">#tailwind</span>
         <span class="skill-tag tag-database">#sql</span>
         <span class="skill-tag tag-database">#postgresql</span>
         <span class="skill-tag tag-database">#mongodb</span>
         <span class="skill-tag tag-cloud">#docker</span>
         <span class="skill-tag tag-cloud">#kubernetes</span>
+        <span class="skill-tag tag-cloud">#aws</span>
         <span class="skill-tag tag-cloud">#azure</span>
+        <span class="skill-tag tag-cloud">#gcp</span>
         <span class="skill-tag tag-spring">#git</span>
         <span class="skill-tag tag-spring">#github</span>
         <span class="skill-tag tag-database">#restapi</span>
         <span class="skill-tag tag-react">#graphql</span>
+        <span class="skill-tag tag-cloud">#microservices</span>
+        <span class="skill-tag tag-cloud">#devops</span>
+        <span class="skill-tag tag-cloud">#ci-cd</span>
+        <span class="skill-tag tag-cloud">#security</span>
+        <span class="skill-tag tag-cloud">#performance</span>
+        <span class="skill-tag tag-cloud">#linux</span>
+        <span class="skill-tag tag-cloud">#bash</span>
         <span class="skill-tag tag-spring">#testing</span>
-        <span class="skill-tag tag-java">#hosting</span>
+        <span class="skill-tag tag-spring">#agile</span>
+        <span class="skill-tag tag-react">#opensource</span>
       </div>
+
+      <!-- ABOUT (SEO-friendly crawlable content) -->
+      <section id="about" class="about" aria-labelledby="about-heading">
+        <h2 id="about-heading">About Me</h2>
+        <p>
+          I'm Md. Shahin Akhtar Rupom, a software engineer and Microsoft Student Ambassador specializing in full-stack web development and cloud-native architectures. I build scalable backend systems with Java, Spring Boot, and Node.js, and modern frontends with React and Next.js.
+        </p>
+        <p>
+          My work includes designing RESTful APIs and GraphQL services, containerizing applications with Docker, orchestrating with Kubernetes, and deploying to cloud platforms (AWS, Azure, GCP). I follow TDD, CI/CD practices and contribute to open source projects.
+        </p>
+      </section>
 
       <div class="socials">
         <a
