--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <meta name="twitter:image" content="/images/og-image.svg" />
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
-  <link rel="stylesheet" href="main.css" />
+  <link rel="stylesheet" href="/main.css" />
 
   <link rel="icon" type="image/png" href="images/favicon.png" />
   
