--- a/index.html
+++ b/index.html
@@ -8,25 +8,25 @@
   <!-- SEO meta -->
   <meta name="description" content="Md. Shahin Akhtar Rupom — Software engineer and CSE student. Full‑stack developer skilled in Java, Spring, Spring Boot, JavaScript, TypeScript, React, Next.js, Node.js, REST APIs, GraphQL, Docker, Kubernetes, AWS, SQL and more." />
   <meta name="keywords" content="Md. Shahin Akhtar Rupom, Rupom Chowdhury, Rupom, software engineer, full stack developer, Java, Spring, Spring Boot, JavaScript, TypeScript, React, Node.js, Next.js, Docker, Kubernetes, AWS, PostgreSQL, MongoDB, DevOps, CI/CD, REST API, GraphQL" />
-  <meta name="author" content="Md. Shahin Akhtar Rupom" />
+  <meta name="author" content="MD. Shahin Akhtar Rupom" />
   <link rel="canonical" href="https://rupom.dev/" />
 
   <!-- Open Graph / Twitter -->
   <meta property="og:title" content="MD. SHAHIN AKHTAR RUPOM — Software Engineer" />
   <meta property="og:description" content="Full-stack developer skilled in Java, Spring, JavaScript, React, Node.js, Docker, Kubernetes, and cloud technologies." />
-  <meta property="og:image" content="/images/og-image.svg" />
+  <meta property="og:image" content="./images/og-image.svg" />
   <meta property="og:url" content="https://rupom.dev/" />
   <meta property="og:type" content="profile" />
 
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="MD. SHAHIN AKHTAR RUPOM — Software Engineer" />
   <meta name="twitter:description" content="Full-stack developer skilled in Java, Spring, JavaScript, React, Node.js, Docker, Kubernetes, and cloud technologies." />
-  <meta name="twitter:image" content="/images/og-image.svg" />
+  <meta name="twitter:image" content="./images/og-image.svg" />
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
-  <link rel="stylesheet" href="/main.css" />
+  <link rel="stylesheet" href="./main.css" />
 
-  <link rel="icon" type="image/png" href="images/favicon.png" />
+  <link rel="icon" type="image/png" href="./images/favicon.png" />
   
   <!-- Structured data for SEO (Person) -->
   <script type="application/ld+json">
