--- a/index.html
+++ b/index.html
@@ -64,23 +64,23 @@
         <span class="skill-tag tag-spring">#spring</span>
         <span class="skill-tag tag-spring">#springboot</span>
         <span class="skill-tag tag-javascript">#javascript</span>
-        <span class="skill-tag tag-javascript">#typescript</span>
+       <!-- <span class="skill-tag tag-javascript">#typescript</span> -->
         <span class="skill-tag tag-php">#php</span>
         <span class="skill-tag tag-database">#mysql</span>
         <span class="skill-tag tag-database">#mssql</span>
         <span class="skill-tag tag-javascript">#nodejs</span>
-        <span class="skill-tag tag-javascript">#express</span>
+       <!-- <span class="skill-tag tag-javascript">#express</span> -->
         <span class="skill-tag tag-javascript">#html</span>
         <span class="skill-tag tag-javascript">#css</span>
-        <span class="skill-tag tag-react">#react</span>
-        <span class="skill-tag tag-react">#nextjs</span>
+       <!-- <span class="skill-tag tag-react">#react</span>
+        <span class="skill-tag tag-react">#nextjs</span> -->
         <span class="skill-tag tag-react">#tailwind</span>
         <span class="skill-tag tag-database">#sql</span>
         <span class="skill-tag tag-database">#postgresql</span>
         <span class="skill-tag tag-database">#mongodb</span>
         <span class="skill-tag tag-cloud">#docker</span>
         <span class="skill-tag tag-cloud">#kubernetes</span>
-        <span class="skill-tag tag-cloud">#aws</span>
+       <!-- <span class="skill-tag tag-cloud">#aws</span> -->
         <span class="skill-tag tag-cloud">#azure</span>
         <span class="skill-tag tag-cloud">#gcp</span>
         <span class="skill-tag tag-spring">#git</span>
