--- a/index.html
+++ b/index.html
@@ -5,20 +5,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>RUPOM — PERSONAL PAGE</title>
 
-  <meta name="description" content="Md. Shahin Akhtar Rupom — Software engineer and CSE student. Full‑stack developer skilled in Java, Spring, Spring Boot, JavaScript, TypeScript, React, Next.js, Node.js, REST APIs, GraphQL, Docker, Kubernetes, AWS, SQL and more." />
-  <meta name="keywords" content="Md. Shahin Akhtar Rupom, Rupom Chowdhury, Rupom, software engineer, full stack developer, Java, Spring, Spring Boot, JavaScript, TypeScript, React, Node.js, Next.js, Docker, Kubernetes, AWS, PostgreSQL, MongoDB, DevOps, CI/CD, REST API, GraphQL" />
+  <meta name="description" content="Md. Shahin Akhtar Rupom — Software engineer and CSE student. Full‑stack developer skilled in Java, Spring, Spring Boot, JavaScript, REST APIs, GraphQL, Docker, Kubernetes, Azure, SQL and more." />
+  <meta name="keywords" content="Md. Shahin Akhtar Rupom, Rupom Chowdhury, Rupom, software engineer, full stack developer, Java, Spring, Spring Boot, JavaScript, Docker, Kubernetes, Azure, PostgreSQL, MongoDB, DevOps, CI/CD, REST API, GraphQL" />
   <meta name="author" content="MD. Shahin Akhtar Rupom" />
   <link rel="canonical" href="https://rupom.dev/" />
 
   <meta property="og:title" content="MD. SHAHIN AKHTAR RUPOM — Software Engineer" />
-  <meta property="og:description" content="Full-stack developer skilled in Java, Spring, JavaScript, React, Node.js, Docker, Kubernetes, and cloud technologies." />
+  <meta property="og:description" content="Full-stack developer skilled in Java, Spring, JavaScript, Docker, Kubernetes, and cloud technologies." />
   <meta property="og:image" content="./images/og-image.svg" />
   <meta property="og:url" content="https://rupom.dev/" />
   <meta property="og:type" content="profile" />
 
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="MD. SHAHIN AKHTAR RUPOM — Software Engineer" />
-  <meta name="twitter:description" content="Full-stack developer skilled in Java, Spring, JavaScript, React, Node.js, Docker, Kubernetes, and cloud technologies." />
+  <meta name="twitter:description" content="Full-stack developer skilled in Java, Spring, JavaScript, Docker, Kubernetes, and cloud technologies." />
   <meta name="twitter:image" content="./images/og-image.svg" />
 
   <link rel="stylesheet" href="./main.css" />
@@ -34,13 +34,13 @@
     "jobTitle": "Software Engineer / Microsoft Student Ambassador",
     "url": "https://rupom.dev",
     "image": "https://rupom.dev/images/og-image.svg",
-    "description": "Full-stack developer skilled in Java, Spring, JavaScript, React, Node.js, Docker, Kubernetes, and cloud technologies.",
+    "description": "Full-stack developer skilled in Java, Spring, JavaScript, Docker, Kubernetes, and cloud technologies.",
     "sameAs": [
       "https://github.com/RupomChowdhury",
       "https://www.linkedin.com/in/md-shahin-akhtar-rupom",
       "https://www.facebook.com/web.rupom"
     ],
-    "knowsAbout": ["Java","Spring","Spring Boot","JavaScript","TypeScript","React","Node.js","Next.js","Docker","Kubernetes","AWS","PostgreSQL","MongoDB","DevOps","CI/CD","REST APIs","GraphQL"]
+    "knowsAbout": ["Java","Spring","Spring Boot","JavaScript","Docker","Kubernetes","Azure","PostgreSQL","MongoDB","DevOps","CI/CD","REST APIs","GraphQL"]
   }
   </script>
 </head>
