--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <span class="skill-tag tag-cloud">#security</span>
         <span class="skill-tag tag-cloud">#performance</span>
         <span class="skill-tag tag-cloud">#linux</span>
-        <span class="skill-tag tag-cloud">#bash</span>
+        <!-- <span class="skill-tag tag-cloud">#bash</span> -->
         <span class="skill-tag tag-spring">#testing</span>
         <span class="skill-tag tag-spring">#agile</span>
         <span class="skill-tag tag-react">#opensource</span>
