--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     "sameAs": [
       "https://github.com/RupomChowdhury",
       "https://www.linkedin.com/in/md-shahin-akhtar-rupom",
-      "https://www.facebook.com/web.rupom"
+      "https://m.me/web.rupom"
     ],
     "knowsAbout": ["Java","Spring","Spring Boot","JavaScript","Docker","Kubernetes","Azure","PostgreSQL","MongoDB","DevOps","CI/CD","REST APIs","GraphQL"]
   }
@@ -137,7 +137,7 @@
         <a
           class="icon-link"
           href="javascript:void(0)"
-          data-url="https://www.facebook.com/web.rupom"
+          data-url="https://m.me/web.rupom"
           data-target="blank"
           aria-label="FACEBOOK"
         >
