--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
         <a
           class="btn"
           href="javascript:void(0)"
-          data-url="https://blog.rupom.dev"
+          data-url="https://docs.rupom.dev"
           data-target="blank"
           aria-label="Read my blog"
         >
