--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <span class="skill-tag tag-php">#php</span>
         <span class="skill-tag tag-database">#mysql</span>
         <span class="skill-tag tag-database">#mssql</span>
-        <span class="skill-tag tag-javascript">#nodejs</span>
+        <span class="skill-tag tag-spring">#hibernate/jpa</span>
        <!-- <span class="skill-tag tag-javascript">#express</span> -->
         <span class="skill-tag tag-javascript">#html</span>
         <span class="skill-tag tag-javascript">#css</span>
