--- a/index.html
+++ b/index.html
@@ -243,6 +243,7 @@
 
     const phrases = [
       "MICROSOFT STUDENT AMBASSADOR",
+      "Java Backend Developer",
       "CSE STUDENT ツ",
       "PROBLEM SOLVER",
       "TECH ENTHUSIAST",
